--- a/fundamentos/bloco-03-introducao-a-html-e-css/dia-01-html-e-css-estruturas-de-pagina/index.html
+++ b/fundamentos/bloco-03-introducao-a-html-e-css/dia-01-html-e-css-estruturas-de-pagina/index.html
@@ -5,12 +5,15 @@
     <title>HTML</title>
   </head>
   <body>
-    <h1>Exercícios</h1>
     <img src="https://course.betrybe.com/images/trybe-logo-e10dbaaa26462aa149b81a924b00df07.png?vsn=d" alt="Logo da Trybe" width="300">
+    <h1>Exercícios</h1>
     <ul>
-        <li>Kevin Mendonça</li>
-        <li>Richard Leal (RichieL)</li>
+        <li><a href="#kevin">Kevin Mendonça</a></li>
+        <li><a href="#richiel">Richard Leal (RichieL)</a></li>
     </ul>
     <img src="logo-stream-richiel.png" alt="Logo do RichieL">
+    <p id="kevin">Kevin é um amigo meu da faculdade que me inspirou a embarcar nessa jornada.</p>
+    <p id="richiel">Richard, ou como é mais conhecido pelos seus espectadores, RichieL, é um streamer e amigo que embarcou nessa jornada junto comigo.</p>
+    <a href="https://www.google.com.br/">Clique aqui para ir ao Google</a>
   </body>
 </html>
