--- a/fundamentos/bloco-03-introducao-a-html-e-css/dia-02-html-e-css-primeiros-passos-em-css/index.html
+++ b/fundamentos/bloco-03-introducao-a-html-e-css/dia-02-html-e-css-primeiros-passos-em-css/index.html
@@ -12,12 +12,16 @@
         ul {
             background-color: blue;
         }
+
+        .texto {
+            background-color: purple;
+        }
     </style>
   </head>
   <body>
     <h1>Exercícios 3.2</h1>
-    <p>Qual é a sua cor favorita?</p>
-    <ul>
+    <p class="texto">Qual é a sua cor favorita?</p>
+    <ul class="texto">
       <li>Amarelo</li>
       <li>Vermelho</li>
       <li>Marrom</li>
