--- a/fundamentos/bloco-03-introducao-a-html-e-css/dia-02-html-e-css-primeiros-passos-em-css/index.html
+++ b/fundamentos/bloco-03-introducao-a-html-e-css/dia-02-html-e-css-primeiros-passos-em-css/index.html
@@ -6,6 +6,7 @@
     <style>
         h1 {
             font-size: 65px;
+            font-family: sans-serif;
             color: orange;
         }
 
