--- a/fundamentos/bloco-03-introducao-a-html-e-css/dia-02-html-e-css-primeiros-passos-em-css/index.html
+++ b/fundamentos/bloco-03-introducao-a-html-e-css/dia-02-html-e-css-primeiros-passos-em-css/index.html
@@ -10,12 +10,16 @@
             color: orange;
         }
 
-        ul {
-            background-color: blue;
-        }
-
         .texto {
             background-color: purple;
+        }
+
+        p {
+            font-weight: 600;
+        }
+
+        ul {
+            background-color: blue;
         }
     </style>
   </head>
