--- a/fundamentos/bloco-03-introducao-a-html-e-css/dia-02-html-e-css-primeiros-passos-em-css/index.html
+++ b/fundamentos/bloco-03-introducao-a-html-e-css/dia-02-html-e-css-primeiros-passos-em-css/index.html
@@ -11,6 +11,9 @@
         h1 {
             font-size: 65px;
             font-family: sans-serif;
+            font-style: italic;
+            text-decoration: underline;
+            text-align: center;
             color: orange;
         }
 
@@ -25,6 +28,7 @@
 
         ul {
             background-color: blue;
+            line-height: 30px;
         }
     </style>
   </head>
