--- a/fundamentos/bloco-03-introducao-a-html-e-css/dia-03-html-e-css-seletores-e-posicionamento/index.html
+++ b/fundamentos/bloco-03-introducao-a-html-e-css/dia-03-html-e-css-seletores-e-posicionamento/index.html
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Exercício de Fixação: box model</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Exercício de Fixação: box model, posicionamento de elementos</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="caixa width-and-height" style="background: #036b52">A</div>
-  <div class="caixa width-and-height padding" style="background: #41197f;">B</div>
-  <div class="caixa width-and-height padding margin" style="background: #444955">C</div>
-  <div class="caixa width-and-height padding margin border" style="background: #3898EC">D</div>
+    <div class="caixa width-and-height" style="background: #036b52">A</div>
+    <div class="caixa width-and-height padding" style="background: #41197f;">B</div>
+    <div class="caixa width-and-height padding margin" style="background: #444955">C</div>
+    <div class="caixa width-and-height padding margin border" style="background: #3898EC">D</div>
+    <hr>
+    <h1>Exercícios de fixação 3.3</h1>
+    <img src="https://bit.ly/39HLUyi" alt="jumpMario" class="super-mario" />
+    <img src="https://bit.ly/3arGfMc" alt="goomba" class="goomba" />
+    <img src="https://bit.ly/2MV2bY0" alt="bowser" class="bowser" />
+    <p class="speach">
+        Goomba, do something!
+    </p>
+    <img src="https://bit.ly/3tmxgED" alt="baloon" class="baloon" />
 </body>
 </html>
