Adiciona texto base do exercicio 3

--- a/fundamentos/bloco-03-introducao-a-html-e-css/dia-03-html-e-css-seletores-e-posicionamento/index.html
+++ b/fundamentos/bloco-03-introducao-a-html-e-css/dia-03-html-e-css-seletores-e-posicionamento/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercício de Fixação: box model, posicionamento de elementos</title>
+    <title>Exercícios de Fixação: box model, posicionamento de elementos, agrupando seletores</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -13,12 +13,27 @@
     <div class="caixa width-and-height padding margin" style="background: #444955">C</div>
     <div class="caixa width-and-height padding margin border" style="background: #3898EC">D</div>
     <hr>
-    <img src="https://bit.ly/39HLUyi" alt="jumpMario" class="super-mario" />
-    <img src="https://bit.ly/3arGfMc" alt="goomba" class="goomba" />
-    <img src="https://bit.ly/2MV2bY0" alt="bowser" class="bowser" />
-    <p class="speach">
-        Goomba, do something!
-    </p>
-    <img src="https://bit.ly/3tmxgED" alt="baloon" class="baloon" />
+    <div class="exercicio-2">
+        <img src="https://bit.ly/39HLUyi" alt="jumpMario" class="super-mario" />
+        <img src="https://bit.ly/3arGfMc" alt="goomba" class="goomba" />
+        <img src="https://bit.ly/2MV2bY0" alt="bowser" class="bowser" />
+        <p class="speach">
+            Goomba, do something!
+        </p>
+        <img src="https://bit.ly/3tmxgED" alt="baloon" class="baloon" />
+    </div>
+    <hr>
+    <div>
+        <h1>Lista dos Melhores Sites que já vi</h1>
+        <p>Top 3 dos melhores sites que existem na web</p>
+        <ol>
+            <li>Google</li>
+            <li>Twitch</li>
+            <li>GitHub</li>
+        </ol>
+        <p>Principais motivos para eu gostar deles</p>
+    </div>
+
+
 </body>
 </html>
