Refatora seletores e adiciona soluçao dos exercicios 3

--- a/fundamentos/bloco-03-introducao-a-html-e-css/dia-03-html-e-css-seletores-e-posicionamento/index.html
+++ b/fundamentos/bloco-03-introducao-a-html-e-css/dia-03-html-e-css-seletores-e-posicionamento/index.html
@@ -3,15 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercícios de Fixação: box model, posicionamento de elementos, agrupando seletores</title>
+    <title>Exercícios de Fixação: box model, posicionamento de elementos, agrupando seletores, pseudoclasses</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Exercícios de fixação 3.3</h1>
-    <div class="caixa width-and-height" style="background: #036b52">A</div>
-    <div class="caixa width-and-height padding" style="background: #41197f;">B</div>
-    <div class="caixa width-and-height padding margin" style="background: #444955">C</div>
-    <div class="caixa width-and-height padding margin border" style="background: #3898EC">D</div>
+    <div class="exercicio-1">
+        <div class="caixa width-and-height" style="background: #036b52">A</div>
+        <div class="caixa width-and-height padding" style="background: #41197f;">B</div>
+        <div class="caixa width-and-height padding margin" style="background: #444955">C</div>
+        <div class="caixa width-and-height padding margin border" style="background: #3898EC">D</div>
+    </div>
     <hr>
     <div class="exercicio-2">
         <img src="https://bit.ly/39HLUyi" alt="jumpMario" class="super-mario" />
@@ -23,17 +25,42 @@
         <img src="https://bit.ly/3tmxgED" alt="baloon" class="baloon" />
     </div>
     <hr>
-    <div>
-        <h1>Lista dos Melhores Sites que já vi</h1>
-        <p>Top 3 dos melhores sites que existem na web</p>
-        <ol>
-            <li>Google</li>
-            <li>Twitch</li>
-            <li>GitHub</li>
-        </ol>
-        <p>Principais motivos para eu gostar deles</p>
+    <div class="exercicio-3">
+        <div class="exercicio-3-1">
+            <h1>Lista dos Melhores Sites que já vi</h1>
+            <p>Top 3 dos melhores sites que existem na web</p>
+            <ol>
+                <li>Youtube</li>
+                <li>Twitch</li>
+                <li>Twitter</li>
+            </ol>
+            <p>Principais motivos para eu gostar deles</p>
+            <ul>
+                <li>Entretem</li>
+                <li>Fáceis de usar</li>
+                <li>Permitem socializar</li>
+            </ul>
+        </div>
+        <hr>
+        <div class="exercicio-3-2">
+            <h1>Paleta de Cores</h1>
+            <p>Vamos criar uma paleta de cores com as divs abaixo:</p>
+            <div>
+                <h3>Cor primária</h3>
+            </div>
+            <div>
+                <h3>Cor Secundária</h3>
+            </div>
+                <div>
+            <h3>Cor Complementar</h3>
+                </div>
+            <div>
+                <h3>Cor Escura</h3>
+            </div>
+            <div>
+                <h3>Cor Clara</h3>
+            </div>    
+        </div>
     </div>
-
-
 </body>
 </html>
