Corrige soluçao do exercicio de fixaçao

--- a/fundamentos/bloco-03-introducao-a-html-e-css/dia-04-html-semantico/index.html
+++ b/fundamentos/bloco-03-introducao-a-html-e-css/dia-04-html-semantico/index.html
@@ -15,7 +15,8 @@
         height: 50px;
         text-align: center;
         width: 200px;
-        display: inline-block;
+        display: block;
+        margin: auto;
       }
 
       .second {
@@ -49,7 +50,6 @@
     <section class="podium">
       <ul>
         <li class="first">1º - Equipe 1</li>
-        <br>
         <li class="second">2º - Equipe 2</li>
         <li class="third">3º - Equipe 3</li>
       </ul>
