--- a/fundamentos/bloco-03-introducao-a-html-e-css/dia-04-html-semantico/index.html
+++ b/fundamentos/bloco-03-introducao-a-html-e-css/dia-04-html-semantico/index.html
@@ -7,6 +7,13 @@
   <body>
     <header>
       <h1>Soco a 80 km/h: Conheça o Stomatopoda</h1>
+      <nav>
+        <ul>
+          <li><a>Página Inicial</a></li>
+          <li><a>Sobre</a></li>
+          <li><a>Contato</a></li>
+        </ul>
+      </nav>
     </header>
   </body>
 </html>
