Adiciona um artigo com alguns fatos sobre o Stomatopoda

--- a/fundamentos/bloco-03-introducao-a-html-e-css/dia-04-html-semantico/index.html
+++ b/fundamentos/bloco-03-introducao-a-html-e-css/dia-04-html-semantico/index.html
@@ -14,6 +14,16 @@
           <li><a>Contato</a></li>
         </ul>
       </nav>
+      <main>
+        <article>
+          <h2>Fatos sobre o Stomatopoda</h2>
+          <p>O Stomatopoda, ou lacraia-do-mar, vive em águas rasas e mornas e tipicamente cresce até um comprimento entre 15 e 30 cm.</p>
+          <p>E essa maravilhosa criatura possui dezesseis tipos de cones receptores de cor, que permitem que ela perceba <em>muito</em> mais cores em relação ao olho humano.</p>
+          <p>Ela possui dois apêndices raptoriais na frente de seu corpo, que aceleram com a mesma velocidade de um tiro de pistola .22 e, em menos de três milésimos de segundo, podem atacar uma presa com 1500 N de força.</p>
+          <p>Seus membros se movem tão rápido que a água ao redor deles ferve em um processo conhecido como supercavitação. Quando essas bolhas de cavitação estouram, isso produz uma onda de choque submarina que pode matar qualquer presa mesmo se a lacraia-do-mar errar seu alvo.</p>
+          <p>A força dessas bolhas em colapso também produz temperaturas da ordem de milhares de Kelvins e emite pequenas explosões de luz. Esse efeito é chamado sonoluminescência.</p>
+        </article>
+      </main>
     </header>
   </body>
 </html>
