Adiciona mais fatos sobre o Stomatopoda

--- a/fundamentos/bloco-03-introducao-a-html-e-css/dia-04-html-semantico/index.html
+++ b/fundamentos/bloco-03-introducao-a-html-e-css/dia-04-html-semantico/index.html
@@ -22,6 +22,9 @@
           <p>Ela possui dois apêndices raptoriais na frente de seu corpo, que aceleram com a mesma velocidade de um tiro de pistola .22 e, em menos de três milésimos de segundo, podem atacar uma presa com 1500 N de força.</p>
           <p>Seus membros se movem tão rápido que a água ao redor deles ferve em um processo conhecido como supercavitação. Quando essas bolhas de cavitação estouram, isso produz uma onda de choque submarina que pode matar qualquer presa mesmo se a lacraia-do-mar errar seu alvo.</p>
           <p>A força dessas bolhas em colapso também produz temperaturas da ordem de milhares de Kelvins e emite pequenas explosões de luz. Esse efeito é chamado sonoluminescência.</p>
+          <p>Dessa forma, desmembramento é como a lacraia-do-mar mata sua presa. Ela quebra outros animais, como carangueijos, moluscos, ostras e polvos, em pedaços.</p>
+          <p>Seus membros são tão resilientes que pesquisadores têm estudado a estrutura celular deles para uso no desenvolvimento de armaduras avançadas para tropas de combate.</p>
+          <p>Aquários normalmente não abrigam lacraias-do-mar porque elas tendem a matar todas as criaturas com quem dividem um tanque, além de poderem quebrar vidros.</p>
         </article>
       </main>
     </header>
