Divide o texto em seçoes e adiciona referencias

--- a/fundamentos/bloco-03-introducao-a-html-e-css/dia-04-html-semantico/index.html
+++ b/fundamentos/bloco-03-introducao-a-html-e-css/dia-04-html-semantico/index.html
@@ -17,14 +17,51 @@
       <main>
         <article>
           <h2>Fatos sobre o Stomatopoda</h2>
-          <p>O Stomatopoda, ou lacraia-do-mar, vive em águas rasas e mornas e tipicamente cresce até um comprimento entre 15 e 30 cm.</p>
-          <p>E essa maravilhosa criatura possui dezesseis tipos de cones receptores de cor, que permitem que ela perceba <em>muito</em> mais cores em relação ao olho humano.</p>
-          <p>Ela possui dois apêndices raptoriais na frente de seu corpo, que aceleram com a mesma velocidade de um tiro de pistola .22 e, em menos de três milésimos de segundo, podem atacar uma presa com 1500 N de força.</p>
-          <p>Seus membros se movem tão rápido que a água ao redor deles ferve em um processo conhecido como supercavitação. Quando essas bolhas de cavitação estouram, isso produz uma onda de choque submarina que pode matar qualquer presa mesmo se a lacraia-do-mar errar seu alvo.</p>
-          <p>A força dessas bolhas em colapso também produz temperaturas da ordem de milhares de Kelvins e emite pequenas explosões de luz. Esse efeito é chamado sonoluminescência.</p>
-          <p>Dessa forma, desmembramento é como a lacraia-do-mar mata sua presa. Ela quebra outros animais, como carangueijos, moluscos, ostras e polvos, em pedaços.</p>
-          <p>Seus membros são tão resilientes que pesquisadores têm estudado a estrutura celular deles para uso no desenvolvimento de armaduras avançadas para tropas de combate.</p>
-          <p>Aquários normalmente não abrigam lacraias-do-mar porque elas tendem a matar todas as criaturas com quem dividem um tanque, além de poderem quebrar vidros.</p>
+          <section>
+            <h3>Informações gerais</h3>
+            <table>
+              <tr>
+                <td>Reino</td>
+                <td>Filo</td>
+                <td>Subfilo</td>
+                <td>Classe</td>
+                <td>Subclasse</td>
+                <td>Ordem</td>
+              </tr>
+              <tr>
+                <td>Animalia</td>
+                <td>Arthropoda</td>
+                <td>Crustacea</td>
+                <td>Malacostraca</td>
+                <td>Hoplocarida</td>
+                <td>Stomatopoda</td>
+              </tr>
+            </table>
+            <p>O <em>Stomatopoda</em>, <em><i>Odontodactylus scyllarus</i></em> ou <em>lacraia-do-mar</em>, <em>vive em águas rasas e mornas</em> e tipicamente cresce até um <em>comprimento entre 15 e 30 cm</em>.</p>
+          </section>
+          <section>
+            <h3>Visão</h3>
+            <p>E essa maravilhosa criatura possui <em>dezesseis tipos de cones receptores de cor</em>, que permitem que ela perceba <em>muito mais cores</em> em relação ao olho humano.</p>
+          </section>
+          <section>
+            <h3>Garras</h3>
+            <p>Ela possui dois apêndices raptoriais na frente de seu corpo, que aceleram com a <em>mesma velocidade de um tiro de pistola .22</em> e, em menos de três milésimos de segundo, podem atacar uma presa com <em>1500 N de força</em>.</p>
+            <p>Seus membros se movem tão rápido que a água ao redor deles ferve em um processo conhecido como <em>supercavitação</em>. Quando essas bolhas de cavitação estouram, isso produz uma <em>onda de choque submarina</em> que pode <em>matar qualquer presa mesmo se</em> a lacraia-do-mar <em>errar seu alvo</em>.</p>
+            <p>A força dessas bolhas em colapso também produz <em>temperaturas da ordem de milhares de Kelvins</em> e emite pequenas <em>explosões de luz</em>. Esse efeito é chamado <em>sonoluminescência</em>.</p>
+            <p>Dessa forma, <em>desmembramento</em> é como a lacraia-do-mar mata sua presa. Ela <em>quebra outros animais</em>, como <em>carangueijos</em>, <em>moluscos</em>, <em>ostras</em> e <em>polvos</em>, em pedaços.</p>
+            <p>Seus membros são tão <em>resilientes</em> que pesquisadores têm estudado a estrutura celular deles para uso no desenvolvimento de <em>armaduras avançadas para tropas de combate</em>.</p>
+          </section>
+          <section>
+            <h3>Aquários</h3>
+            <p>Aquários normalmente não abrigam lacraias-do-mar porque elas tendem a <em>matar todas as criaturas com quem dividem um tanque</em>, além de poderem <em>quebrar vidros</em>.</p>
+          </section>
+          <section>
+            <h3>Referências bibliográficas</h3>
+            <ul>
+              <li><a href="https://theoatmeal.com/comics/mantis_shrimp"><i>Why the Mantis Shrimp is my new favorite animal</i></a></li>
+              <li><a href="https://en.wikipedia.org/wiki/Mantis_shrimp"></a>Página da Wikipédia sobre o Stomatopoda - <em>em inglês</em></li>
+            </ul>
+          </section>
         </article>
       </main>
     </header>
