Adiciona correçoes de acessibilidade

--- a/fundamentos/bloco-03-introducao-a-html-e-css/dia-04-html-semantico/index.html
+++ b/fundamentos/bloco-03-introducao-a-html-e-css/dia-04-html-semantico/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
+    <title>Conheça o Stomatopoda</title>
   </head>
   <body>
     <header>
@@ -20,7 +21,7 @@
         <h2>Fatos sobre o Stomatopoda</h2>
         <section>
           <h3>Informações gerais</h3>
-          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/03/Odontodactylus_scyllarus_2.png/220px-Odontodactylus_scyllarus_2.png">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/03/Odontodactylus_scyllarus_2.png/220px-Odontodactylus_scyllarus_2.png" alt="Perfil do Stomatopoda">
           <table>
             <tr>
               <td>Reino</td>
@@ -43,12 +44,12 @@
         </section>
         <section>
           <h3>Visão</h3>
-          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Mantis_Shrimp_Eyes.JPG/220px-Mantis_Shrimp_Eyes.JPG">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Mantis_Shrimp_Eyes.JPG/220px-Mantis_Shrimp_Eyes.JPG" alt="Olhos do Stomatopoda">
           <p>E essa maravilhosa criatura possui <em>dezesseis tipos de cones receptores de cor</em>, que permitem que ela perceba <em>muito mais cores</em> em relação ao olho humano.</p>
         </section>
         <section>
           <h3>Garras</h3>
-          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/26/Squilla_mantis.jpg/220px-Squilla_mantis.jpg">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/26/Squilla_mantis.jpg/220px-Squilla_mantis.jpg" alt="Garras do Stomatopoda">
           <p>Ela possui dois apêndices raptoriais na frente de seu corpo, que aceleram com a <em>mesma velocidade de um tiro de pistola .22</em> e, em menos de três milésimos de segundo, podem atacar uma presa com <em>1500 N de força</em>.</p>
           <p>Seus membros se movem tão rápido que a água ao redor deles ferve em um processo conhecido como <em>supercavitação</em>. Quando essas bolhas de cavitação estouram, isso produz uma <em>onda de choque submarina</em> que pode <em>matar qualquer presa mesmo se</em> a lacraia-do-mar <em>errar seu alvo</em>.</p>
           <p>A força dessas bolhas em colapso também produz <em>temperaturas da ordem de milhares de Kelvins</em> e emite pequenas <em>explosões de luz</em>. Esse efeito é chamado <em>sonoluminescência</em>.</p>
@@ -57,7 +58,7 @@
         </section>
         <section>
           <h3>Aquários</h3>
-          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3a/Hai_san_Hau_Loc05.JPG/220px-Hai_san_Hau_Loc05.JPG">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3a/Hai_san_Hau_Loc05.JPG/220px-Hai_san_Hau_Loc05.JPG" alt="Stomatopodae capturados">
           <p>Aquários normalmente não abrigam lacraias-do-mar porque elas tendem a <em>matar todas as criaturas com quem dividem um tanque</em>, além de poderem <em>quebrar vidros</em>.</p>
         </section>
         <section>
@@ -75,6 +76,5 @@
     <footer>
       "Conteúdo compilado por Gabriel Alves, 2021".
     </footer>
-   
   </body>
 </html>
