Adiciona exercicio de fixaçao 1.2

--- a/fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/dia-01-javascript-dom-e-seletores/exercicios-de-fixacao-seletores.html
+++ b/fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/dia-01-javascript-dom-e-seletores/exercicios-de-fixacao-seletores.html
@@ -12,6 +12,8 @@
       paragraph.style.color = "red";
       const title = document.getElementById("page-title");
       title.innerHTML = "Capitão América 2 - O Soldado Invernal";
+      const secondParagraph = document.getElementById("second-paragraph");
+      secondParagraph.style.color = "blue";
     </script>
   </body>
 </html>
