--- a/fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/dia-01-javascript-dom-e-seletores/exercicios-de-fixacao-seletores.html
+++ b/fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/dia-01-javascript-dom-e-seletores/exercicios-de-fixacao-seletores.html
@@ -3,9 +3,9 @@
   <body>
     <header>
       <h2 id="page-title">Título</h2>
-      <p id="paragraph">Dê uma cor para este parágrafo!</p>
+      <p id="paragraph" class="paragraph">Dê uma cor para este parágrafo!</p>
       <h4 id="subtitle">Subtítulo</h4>
-      <p id="second-paragraph">Segundo parágrafo!</p>
+      <p id="second-paragraph" class="paragraph">Segundo parágrafo!</p>
     </header>
     <script>
       const paragraph = document.getElementById("paragraph");
@@ -14,6 +14,8 @@
       title.innerHTML = "Capitão América 2 - O Soldado Invernal";
       const secondParagraph = document.getElementById("second-paragraph");
       secondParagraph.style.color = "blue";
+      const subtitle = document.getElementById("subtitle");
+      subtitle.innerHTML = "Quando tudo mudou e o universo se expandiu pela primeira vez"; 
     </script>
   </body>
 </html>
