Adiciona exercicios de fixaçao 2.2 e 2.3

--- a/fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/dia-01-javascript-dom-e-seletores/exercicios-de-fixacao-seletores.html
+++ b/fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/dia-01-javascript-dom-e-seletores/exercicios-de-fixacao-seletores.html
@@ -15,7 +15,9 @@
       const secondParagraph = document.getElementById("second-paragraph");
       secondParagraph.style.color = "blue";
       const subtitle = document.getElementById("subtitle");
-      subtitle.innerHTML = "Quando tudo mudou e o universo se expandiu pela primeira vez"; 
+      subtitle.innerHTML = "Quando tudo mudou e o universo se expandiu pela primeira vez";
+      const paragrafos = document.getElementsByClassName("paragraph");
+      paragrafos[0].style.textDecoration = "underline"; 
     </script>
   </body>
 </html>
