Adiciona exercicio de fixaçao 2.4

--- a/fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/dia-01-javascript-dom-e-seletores/exercicios-de-fixacao-seletores.html
+++ b/fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/dia-01-javascript-dom-e-seletores/exercicios-de-fixacao-seletores.html
@@ -13,11 +13,14 @@
       const title = document.getElementById("page-title");
       title.innerHTML = "Capitão América 2 - O Soldado Invernal";
       const secondParagraph = document.getElementById("second-paragraph");
-      secondParagraph.style.color = "blue";
+      secondParagraph.style.color = "red";
       const subtitle = document.getElementById("subtitle");
       subtitle.innerHTML = "Quando tudo mudou e o universo se expandiu pela primeira vez";
       const paragrafos = document.getElementsByClassName("paragraph");
-      paragrafos[0].style.textDecoration = "underline"; 
+      paragrafos[0].style.textDecoration = "underline";
+      const subtitleButDifferent = document.getElementsByTagName("h4");
+      subtitleButDifferent[0].style.backgroundColor = "darkblue";
+      subtitleButDifferent[0].style.color = "white";
     </script>
   </body>
 </html>
