--- a/fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/dia-01-javascript-dom-e-seletores/exercicios.html
+++ b/fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/dia-01-javascript-dom-e-seletores/exercicios.html
@@ -51,9 +51,8 @@
             document.getElementsByTagName("p")[0].innerHTML = "Daqui a 2 anos eu me vejo trabalhando em uma empresa de tecnologia e me preparando para imigrar para o Canadá."
         }
 //  Crie uma função que mude a cor do quadrado amarelo para o verde da Trybe (rgb(76,164,109)).
-
         function changeBackground() {
-            document.getElementsByClassName("center-content")[0].style.backgroundColor = "rgb(76,164,109)"
+            document.getElementsByClassName("main-content")[0].style.backgroundColor = "rgb(76,164,109)"
         }
 //  Crie uma função que mude a cor do quadrado vermelho para branco.
 //  Crie uma função que corrija o texto da tag <h1>.
