--- a/fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/dia-01-javascript-dom-e-seletores/exercicios.html
+++ b/fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/dia-01-javascript-dom-e-seletores/exercicios.html
@@ -55,6 +55,9 @@
             document.getElementsByClassName("main-content")[0].style.backgroundColor = "rgb(76,164,109)"
         }
 //  Crie uma função que mude a cor do quadrado vermelho para branco.
+        function changeBackground() {
+            document.getElementsByClassName("center-content")[0].style.backgroundColor = "white"
+        }
 //  Crie uma função que corrija o texto da tag <h1>.
 //  Crie uma função que modifique todo o texto da tag <p> para maiúsculo.
 //  Crie uma função que exiba o conteúdo de todas as tags <p> no console.
