--- a/fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/dia-01-javascript-dom-e-seletores/exercicios.html
+++ b/fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/dia-01-javascript-dom-e-seletores/exercicios.html
@@ -59,6 +59,9 @@
             document.getElementsByClassName("center-content")[0].style.backgroundColor = "white"
         }
 //  Crie uma função que corrija o texto da tag <h1>.
+        function rectifyTitle() {
+            document.getElementsByTagName("h1")[0].innerHTML = "Exercício 5.1 - JavaScript"
+        }
 //  Crie uma função que modifique todo o texto da tag <p> para maiúsculo.
 //  Crie uma função que exiba o conteúdo de todas as tags <p> no console.
     </script>
