--- a/fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/dia-01-javascript-dom-e-seletores/exercicios.html
+++ b/fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/dia-01-javascript-dom-e-seletores/exercicios.html
@@ -48,19 +48,19 @@
         // - document.getElementsByTagName()
 //  Crie uma função que mude o texto na tag <p> para uma descrição de como você se vê daqui a 2 anos. (Não gaste tempo pensando no texto e sim realizando o exercício)
         function rewriteParagraph() {
-            document.getElementsByTagName("p")[0].innerHTML = "Daqui a 2 anos eu me vejo trabalhando em uma empresa de tecnologia e me preparando para imigrar para o Canadá."
+            document.getElementsByTagName("p")[0].innerHTML = "Daqui a 2 anos eu me vejo trabalhando em uma empresa de tecnologia e me preparando para imigrar para o Canadá.";
         }
 //  Crie uma função que mude a cor do quadrado amarelo para o verde da Trybe (rgb(76,164,109)).
         function changeBackground() {
-            document.getElementsByClassName("main-content")[0].style.backgroundColor = "rgb(76,164,109)"
+            document.getElementsByClassName("main-content")[0].style.backgroundColor = "rgb(76,164,109)";
         }
 //  Crie uma função que mude a cor do quadrado vermelho para branco.
         function changeBackground() {
-            document.getElementsByClassName("center-content")[0].style.backgroundColor = "white"
+            document.getElementsByClassName("center-content")[0].style.backgroundColor = "white";
         }
 //  Crie uma função que corrija o texto da tag <h1>.
         function rectifyTitle() {
-            document.getElementsByTagName("h1")[0].innerHTML = "Exercício 5.1 - JavaScript"
+            document.getElementsByTagName("h1")[0].innerHTML = "Exercício 5.1 - JavaScript";
         }
 //  Crie uma função que modifique todo o texto da tag <p> para maiúsculo.
         function toUppercase() {
