Mostra resultado final

--- a/fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/dia-01-javascript-dom-e-seletores/exercicios.html
+++ b/fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/dia-01-javascript-dom-e-seletores/exercicios.html
@@ -78,6 +78,13 @@
                 console.log(paragraphs[i].innerHTML);
             }
         }
+
+        rewriteParagraph();
+        changeOuterBackground();
+        changeInnerBackground();
+        rectifyTitle();
+        toUppercase();
+        showTextinConsole();
     </script>
   </body>
 </html>
