Adiciona exercicio de fixaçao 1.2

--- a/fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/dia-02-javascript-trabalhando-com-elementos/exercicio-de-fixacao-buscando-elementos.html
+++ b/fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/dia-02-javascript-trabalhando-com-elementos/exercicio-de-fixacao-buscando-elementos.html
@@ -18,8 +18,12 @@
         </main>
         <script>
             let currentElement = document.getElementById('elementoOndeVoceEsta');
+            let parentElement = currentElement.parentElement;
+
+            parentElement.style.backgroundColor = "blue";
 
             console.log(currentElement);
+            console.log(parentElement);
         </script>
     </body>
     
