Adiciona exercicio de fixaçao 1.3

--- a/fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/dia-02-javascript-trabalhando-com-elementos/exercicio-de-fixacao-buscando-elementos.html
+++ b/fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/dia-02-javascript-trabalhando-com-elementos/exercicio-de-fixacao-buscando-elementos.html
@@ -19,11 +19,15 @@
         <script>
             let currentElement = document.getElementById('elementoOndeVoceEsta');
             let parentElement = currentElement.parentElement;
+            let firstBorn = currentElement.children[0];
 
             parentElement.style.backgroundColor = "blue";
 
+            firstBorn.innerHTML = "Luke, eu sou seu pai!"
+
             console.log(currentElement);
             console.log(parentElement);
+            console.log(firstBorn);
         </script>
     </body>
     
