--- a/fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/dia-02-javascript-trabalhando-com-elementos/exercicio-de-fixacao-buscando-elementos.html
+++ b/fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/dia-02-javascript-trabalhando-com-elementos/exercicio-de-fixacao-buscando-elementos.html
@@ -20,6 +20,8 @@
             let currentElement = document.getElementById('elementoOndeVoceEsta');
             let parentElement = currentElement.parentElement;
             let firstBorn = currentElement.children[0];
+            let oldestSon = parentElement.children[0];
+            let bigBrother = currentElement.previousElementSibling;
 
             parentElement.style.backgroundColor = "blue";
 
@@ -28,6 +30,8 @@
             console.log(currentElement);
             console.log(parentElement);
             console.log(firstBorn);
+            console.log(oldestSon);
+            console.log(bigBrother);
         </script>
     </body>
     
