--- a/fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/dia-02-javascript-trabalhando-com-elementos/exercicio-de-fixacao-buscando-elementos.html
+++ b/fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/dia-02-javascript-trabalhando-com-elementos/exercicio-de-fixacao-buscando-elementos.html
@@ -22,6 +22,7 @@
             let firstBorn = currentElement.children[0];
             let oldestSon = parentElement.children[0];
             let bigBrother = currentElement.previousElementSibling;
+            let relatedText = currentElement.nextSibling;
 
             parentElement.style.backgroundColor = "blue";
 
@@ -32,6 +33,7 @@
             console.log(firstBorn);
             console.log(oldestSon);
             console.log(bigBrother);
+            console.log(relatedText);
         </script>
     </body>
     
