Adiciona exercicios de fixaçao 1.7 e 1.8

--- a/fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/dia-02-javascript-trabalhando-com-elementos/exercicio-de-fixacao-buscando-elementos.html
+++ b/fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/dia-02-javascript-trabalhando-com-elementos/exercicio-de-fixacao-buscando-elementos.html
@@ -23,6 +23,8 @@
             let oldestSon = parentElement.children[0];
             let bigBrother = currentElement.previousElementSibling;
             let relatedText = currentElement.nextSibling;
+            let middleBrother = currentElement.nextElementSibling;
+            let thirdSon = parentElement.children[2];
 
             parentElement.style.backgroundColor = "blue";
 
@@ -34,6 +36,8 @@
             console.log(oldestSon);
             console.log(bigBrother);
             console.log(relatedText);
+            console.log(middleBrother);
+            console.log(thirdSon);
         </script>
     </body>
     
