Adiciona exercicio de fixaçao 2.4

--- a/fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/dia-02-javascript-trabalhando-com-elementos/exercicio-de-fixacao-buscando-elementos.html
+++ b/fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/dia-02-javascript-trabalhando-com-elementos/exercicio-de-fixacao-buscando-elementos.html
@@ -44,6 +44,8 @@
 
             let grandson = firstBorn.children[0];
 
+            let greatUncle = grandson.parentElement.parentElement.nextElementSibling;
+
             parentElement.style.backgroundColor = "blue";
 
             firstBorn.innerHTML = "Luke, eu sou seu pai!"
@@ -59,6 +61,7 @@
             console.log(babyBrother);
             console.log(baby);
             console.log(grandson);
+            console.log(greatUncle);
         </script>
     </body>
     
