--- a/fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/dia-02-javascript-trabalhando-com-elementos/exercicios.html
+++ b/fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/dia-02-javascript-trabalhando-com-elementos/exercicios.html
@@ -60,6 +60,10 @@
       let title = document.createElement('h1');
       title.innerText = 'Exercício 5.2 - JavaScript DOM'
       document.body.appendChild(title);
+
+      let mainSection = document.createElement('main');
+      mainSection.className = 'main-content';
+      document.body.appendChild(mainSection);
     </script>
   </body>
 </html>
