--- a/fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/dia-02-javascript-trabalhando-com-elementos/exercicios.html
+++ b/fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/dia-02-javascript-trabalhando-com-elementos/exercicios.html
@@ -64,6 +64,10 @@
       let mainSection = document.createElement('main');
       mainSection.className = 'main-content';
       document.body.appendChild(mainSection);
+
+      let centerSection = document.createElement('section');
+      centerSection.className = 'center-content';
+      mainSection.appendChild(centerSection);
     </script>
   </body>
 </html>
