--- a/fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/dia-02-javascript-trabalhando-com-elementos/exercicios.html
+++ b/fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/dia-02-javascript-trabalhando-com-elementos/exercicios.html
@@ -68,6 +68,10 @@
       let centerSection = document.createElement('section');
       centerSection.className = 'center-content';
       mainSection.appendChild(centerSection);
+
+      let someText = document.createElement('p');
+      someText.innerText = 'Algum texto';
+      centerSection.appendChild(someText);
     </script>
   </body>
 </html>
