--- a/fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/dia-02-javascript-trabalhando-com-elementos/exercicios.html
+++ b/fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/dia-02-javascript-trabalhando-com-elementos/exercicios.html
@@ -80,6 +80,11 @@
       let rightSection = document.createElement('section');
       rightSection.className = 'right-content';
       mainSection.appendChild(rightSection);
+
+      let smallImage = document.createElement('img');
+      smallImage.setAttribute('src','https://picsum.photos/200');
+      smallImage.className = 'small-image';
+      leftSection.appendChild(smallImage);
     </script>
   </body>
 </html>
