--- a/fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/dia-02-javascript-trabalhando-com-elementos/exercicios.html
+++ b/fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/dia-02-javascript-trabalhando-com-elementos/exercicios.html
@@ -94,6 +94,15 @@
           numbersList.appendChild(numberElement);
       }
       rightSection.appendChild(numbersList);
+
+      for (let j = 0; j < 3; j += 1) {
+        mainSection.appendChild(document.createElement('h3'));
+      }
+      let subtitles = document.getElementsByTagName('h3');
+      for (let k = 0; k < subtitles.length; k += 1) {
+          subtitles[k].innerText = 'Insira um subtítulo aqui';
+      }
+
     </script>
   </body>
 </html>
