--- a/fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/dia-02-javascript-trabalhando-com-elementos/exercicios.html
+++ b/fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/dia-02-javascript-trabalhando-com-elementos/exercicios.html
@@ -103,6 +103,8 @@
           subtitles[k].innerText = 'Insira um subtítulo aqui';
       }
 
+      title.className = 'title';
+
     </script>
   </body>
 </html>
